# query-reformulation

./: .gitignore  .python-version  CLAUDE.md  PROMPT-entity_properties_relationship-extraction.md  PROMPT-question_generation-comparison.md  PROMPT-question_generation-expansion.md  PROMPT.md  Python.md  README-subqueries_generation-chaining.md  README-subqueries_generation.md  README-synthetic-data-chain.md  README.md  pyproject.toml  query.py  synthetic-data-cost-calculation.numbers  synthetic.py
benchmark/: BERTScore evaluation.xlsx  BERTScoreEval.py  README.md  bertscore_results.csv  bertscore_xlarge_mnli-results.csv  main.py  metric.py  regression.py  rouge_results.csv  score.py
client/: README.md  eval.py  generate.py  main.py  vibe.txt
data/: __init__.py  braid.py  full-prefixed.jsonl  full.jsonl
dataset/: dev.jsonl  full.jsonl
datasets/: README.md  braid.py  dev.jsonl  full.jsonl  split.py  test.jsonl  training.jsonl  validation.jsonl
facts/: 10-kilometer_run.json  167.json  168.json  169.json  1715_Jacobite_Rebellion.json  1906_San_Francisco_Earthquake.json  1922_Committee.json  19th_Century.json  2.json  2011_Christchurch_earthquake.json  20th_Century.json  3.json  336.json  4.json  5_km_run.json  6.json  7.json  8.json  ACT_New_Zealand.json  ASEAN.json  Abel_Tasman_National_Park.json  Aberdeen.json  Aboriginal_Australians.json  Abundance.json  Academia.json  Acadians.json  Accommodation.json  Acidity.json  Actua_Confederation.json  Adam_Ferguson.json  Adam_Smith.json  Administration.json  Advertising.json  Aerospace.json  Africa.json  African_American_Culture.json  African_Culture.json  African_Diaspora.json  African_Plant_Communities.json  African_Plate.json  (+1717 more)
models/: __init__.py  quantize.py  query.py
queries/: README.md  _PROMPT-base.md  _PROMPT-chaining.md  _PROMPT-comparison.md  _PROMPT-expansion.md  batch-input-chaining.jsonl  batch-input-comparison.jsonl  batch-input-expansion.jsonl  batch-output-chaining.jsonl  batch-output-comparison.jsonl  batch-output-expansion.jsonl  chaining.jsonl  chaining.txt  comparison.jsonl  expansion.jsonl  main.py
subqueries/: _README.md  _chaining.py  _comparison.py  _expansion.py  _main.py  _utils.py  chaining.txt  comparison.txt  expansion.txt  token_count_plot.py
syngen/: __init__.py  __main__.py  dbpedia.py  facts.py  knowledge_graph.py  triple_query.py  wikidata.py
train/: README.md  api.py  benchmark.py  capabilities.py  chat.py  lora.py  (+10 more)
(+3 files in other folders)
