[project]
name = "ollama-dl"
version = "0.1.0"
description = "Download models from an Ollama registry"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.27.2",
    "jinja2>=3.1.6",
    "ollama>=0.4.7",
    "openai>=1.66.3",
    "rich>=13.8.1",
    "ruff>=0.9.10",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.7",
]

[tool.ruff.lint]
select = [
    "ANN",
    "COM812",
    "E",
    "F",
    "I",
    "W",
]
ignore = [
    "D",
    "EM102",
    "PLR0913",
    "TRY003",
]
