[project]
name = "query-reformulation"
version = "0.1.0"
description = "Reformulate queries using a transformer model."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "accelerate>=1.0.1",
    "click>=8.1.8",
    "datasets>=3.1.0",
    "evaluate>=0.4.3",
    "google>=3.0.0",
    "gradio>=4.44.1",
    "httpx>=0.27.2",
    "ipython>=8.12.3",
    "jinja2>=3.1.6",
    "levenshtein>=0.25.1",
    "ollama>=0.4.7",
    "openai>=1.66.3",
    "peft; sys_platform == 'linux'",
    "protobuf>=5.29.3",
    "rich>=13.8.1",
    "ruff>=0.9.10",
    "sentencepiece>=0.2.0",
    "torch>=2.5.1",
    "transformers>=4.46.3",
]

[tool.setuptools.packages.find]
include = [
  "train*", 
  "utils*", 
  "models*", 
  "benchmark*", 
  "queries*", 
  "data*", 
  "subqueries*", 
  "client*",
  "facts*"
]
exclude = [
  "models/sft-*",
  "models/peft-*",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.7",
]

[tool.ruff.lint]
select = [
    "ANN",
    "COM812",
    "E",
    "F",
    "I",
    "W",
]
ignore = [
    "D",
    "EM102",
    "E501",
    "PLR0913",
    "TRY003",
    "W293",
]
